[project]
name = "cts-com-filter"
version = "0.1.0"
description = "RS232 bidirectional relay and logger for XIAO ESP32-S3"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
